# windows-automation-python

./: main.py  pyproject.toml
data/reports/: weekly.xlsx
office_automation/: __init__.py  export_excel_to_pdf.py  open_protected_pptx.py  send_outlook_email_html.py
scripts/: __init__.py  create_samples.py  myscript.py  pywin32_send_mail.py
windows_system_utilities/: __init__.py  recycle_bin_delete.py  schedule_task.py
