[project]
name = "windows-automation-python"
version = "0.1.0"
description = "A curated collection of **Windows automation** scripts written in Python. These scripts automate real-world tasks using libraries like **pywin32**, **pywinauto**, and **PyAutoGUI**, etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pywin32>=311",
    "reportlab>=4.4.3",
]
